objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_number__c</fullName>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bill number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Doctor_charge__c</fullName>
        <label>Doctor charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Due_Date__c</fullName>
        <label>Fee Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lab_charge__c</fullName>
        <label>Lab charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medicine_charge__c</fullName>
        <label>Medicine charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_days__c</fullName>
        <label>Number of days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nursing_charge__c</fullName>
        <label>Nursing charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room_charge__c</fullName>
        <label>Room charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Bill__c</fullName>
        <label>Total Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>approval__c</fullName>
        <label>approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>approved</fullName>
                </value>
                <value>
                    <fullName>rejected</fullName>
                </value>
                <value>
                    <fullName>wait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bill_paid__c</fullName>
        <label>paid</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billing_country__c</fullName>
        <label>billing country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>discount_percentage__c</fullName>
        <label>discount percentage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_alert__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <label>paid amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Bills</relationshipLabel>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>remaining_amount__c</fullName>
        <formula>Total_Bill__c  -  paid_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>remaining amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Bill</label>
    <nameField>
        <label>Billname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>